# oxidized-oracle

./: .env.example  .gitignore  README.md
backend-oracle/: .env.example  Cargo.toml
backend-oracle/examples/: fake_iot.rs
backend-oracle/src/: config.rs  main.rs
backend-oracle/src/api/: endpoint.rs  mod.rs  mqtt.rs
backend-oracle/src/crypto/: verify.rs
backend-oracle/src/solana/: client.rs
docs/: api_contract.json
