[package]
name = "backend-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ed25519-dalek = "1.0.1" 
reqwest = { version = "0.11", features = ["json"] }
rand = "0.7"

# --- TAMBAHAN BARU ---
solana-client = "1.18"
solana-sdk = "1.18"
bs58 = "0.5" # Untuk format address Solana
